dom/ipc/Blob.h
@@ -173,7 +173,7 @@ public:
   // Use this for files.
   bool
   SetMysteryBlobInfo(const nsString& aName, const nsString& aContentType,
-                     uint64_t aLength);
+                     uint64_t aLength, uint64_t aLastModifiedDate);
 
   // Use this for non-file blobs.
   bool
